--- a/RESTfulBlogApp/package.json
+++ b/RESTfulBlogApp/package.json
@@ -12,6 +12,7 @@
     "body-parser": "^1.18.3",
     "ejs": "^2.6.1",
     "express": "^4.16.3",
+    "method-override": "^2.3.10",
     "mongoose": "^5.1.4"
   }
 }
